[package]
name = "fforget"
version = "0.0.3"
edition = "2021"
authors = ["Christos Katsakioris <ckatsak@gmail.com>"]
description = "Command-line utility to hint Linux to remove specific files from the page cache"
#documentation = "https://docs.rs/fforget-bin"
readme = "README.md"
repository = "https://github.com/ckatsak/fforget-bin"
license = "Apache-2.0"
#keywords = []
#categories = []

[dependencies]
anyhow = "^1"
clap = { version = "^3.0.13", features = ["derive"] }
fforget = { version = "0.0.2", git = "https://github.com/ckatsak/fforget-rs" }

[profile.release]
lto = "fat"
codegen-units = 1
